[gd_scene load_steps=4 format=3 uid="uid://bd7ynsta2rllr"]

[ext_resource type="Script" uid="uid://dxm87v2vccskn" path="res://Components/spawner_component.gd" id="1_0r3sn"]
[ext_resource type="Script" uid="uid://c0d6svknukwub" path="res://Actors/Frogger/car_spawner.gd" id="1_nfvku"]
[ext_resource type="PackedScene" uid="uid://cks7slttwoxb2" path="res://Actors/Frogger/purple_car.tscn" id="3_q1s7t"]

[node name="CarSpawner" type="Node2D"]
script = ExtResource("1_nfvku")

[node name="SpawnerComponent" type="Node2D" parent="."]
script = ExtResource("1_0r3sn")
scene = ExtResource("3_q1s7t")
metadata/_custom_type_script = "uid://dxm87v2vccskn"

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true
